bat.bool1.posneg.PosNeg.scala.error
Erreur de compilation :
PosNeg:8: error: type mismatch;
 found   : Unit
 required: Boolean
  if (!negative) {
  ^